--- a/manifest.json
+++ b/manifest.json
@@ -1,1 +1,22 @@
+{
+  "name": "My Mini PWA App",
+  "short_name": "MiniApp",
+  "start_url": "index.html",
+  "display": "standalone",
+  "background_color": "#2196f3",
+  "theme_color": "#2196f3",
+  "orientation": "portrait",
+  "icons": [
+    {
+      "src": "icons/icon-192.png",
+      "sizes": "192x192",
+      "type": "image/png"
+    },
+    {
+      "src": "icons/icon-512.png",
+      "sizes": "512x512",
+      "type": "image/png"
+    }
+  ]
+}
 
